--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -260,3 +260,33 @@ body {
   }
 }
 /* ! MAIN LOADER */
+
+
+/* ! RESUME PRINTING */
+@media print {
+  body * {
+    visibility: hidden; /* Sab hide */
+  }
+
+  .print-area, .print-area * {
+    visibility: visible; /* Sirf resume dikhaye */
+  }
+
+  .print-area {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    transform-origin: top left;
+  }
+
+  @page {
+    size: A4;
+    margin: 0;
+  }
+}
+
+
+
